--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           <div class="col-12">
             <a class="btn btn-outline-primary w-100 btn-lg" target="_blank" rel="noopener"
                href="https://wa.me/628XXXXXXXXXX?text=Halo%20Bernadyland,%20saya%20mau%20minta%20detail%20promo%20dan%20simulasi.">
-              Minta Detail Promo
+              Promo
             </a>
           </div>
         </div>
@@ -642,3 +642,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
