--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&family=Noto+Serif:wght@600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -52,8 +56,8 @@
         <!-- CTA -->
         <div class="jm-navRight ms-lg-3">
           <a class="btn jm-waBtn" target="_blank" rel="noopener"
-             href="cariperumahan.html">
-            Cari
+             href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20Saya%20ingin%20%20bertanya.">
+            Pusat Bantuan
           </a>
         </div>
       </div>
@@ -66,18 +70,17 @@
 
 <header
   class="hero-bg"
-  style="--hero-image:url('https://images.unsplash.com/photo-1568605114967-8130f3a36994?auto=format&fit=crop&w=1800&q=80');"
+  style="background-image: url('assets/img/heroland.webp');"
 >
   <div class="container">
     <div class="hero-content">
-
       <a class="scroll-hint" href="#units" aria-label="Scroll ke Unit">
         <i class="bi bi-chevron-down"></i>
       </a>
     </div>
   </div>
-  
 </header>
+
 
 
  <section id="units" class="section-dark">
@@ -101,7 +104,7 @@
         <a class="unit-link" href="detail-tipea.html">
           <div class="card unit-card h-100">
             <div class="unit-img">
-              <img src="https://images.unsplash.com/photo-1572120360610-d971b9d7767c?auto=format&fit=crop&w=1200&q=80" alt="Tipe A" loading="lazy">
+              <img src="assets/img/typea.webp" alt="Tipe A" loading="lazy">
               <span class="unit-badge">Best Seller</span>
             </div>
             <div class="card-body">
@@ -125,7 +128,7 @@
         <a class="unit-link" href="detail-tipea.html">
           <div class="card unit-card h-100">
             <div class="unit-img">
-              <img src="https://images.unsplash.com/photo-1502005229762-cf1b2da7c5d6?auto=format&fit=crop&w=1200&q=80" alt="Tipe B" loading="lazy">
+              <img src="assets/img/typeb.webp" alt="Tipe B" loading="lazy">
             </div>
             <div class="card-body">
               <h3 class="h6 mb-1">Tipe B</h3>
@@ -148,7 +151,7 @@
         <a class="unit-link" href="detail-tipea.html">
           <div class="card unit-card h-100">
             <div class="unit-img">
-              <img src="https://images.unsplash.com/photo-1564013799919-ab600027ffc6?auto=format&fit=crop&w=1200&q=80" alt="Tipe C" loading="lazy">
+              <img src="assets/img/typec.webp" alt="Tipe C" loading="lazy">
             </div>
             <div class="card-body">
               <h3 class="h6 mb-1">Tipe C</h3>
@@ -168,7 +171,7 @@
 
       <!-- Tipe D -->
       <div class="col-md-6 col-lg-3">
-        <a class="unit-link" href="detail-tipea.html">
+        <a class="unit-link" href="assets/img/about.webp">
           <div class="card unit-card h-100">
             <div class="unit-img">
               <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?auto=format&fit=crop&w=1200&q=80" alt="Tipe D" loading="lazy">
@@ -216,7 +219,7 @@
       <div class="col-lg-6">
         <div class="card promo-feature h-100">
           <div class="promo-feature-img">
-            <img src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?auto=format&fit=crop&w=1600&q=80" alt="Promo utama" loading="lazy">
+            <img src="assets/img/promo.jfif" alt="Promo utama" loading="lazy">
           </div>
           <div class="promo-feature-body">
             <div class="promo-tag">PROMO UTAMA</div>
@@ -224,8 +227,8 @@
             <p class="text-muted mb-3">Cocok untuk yang ingin cepat booking. Dapatkan detail paket & simulasi.</p>
 
             <a class="btn btn-accent btn-lg" target="_blank" rel="noopener"
-               href="https://wa.me/628XXXXXXXXXX?text=Halo%20Bernadyland,%20saya%20mau%20info%20promo%20utama%20dan%20pricelist.">
-              Ambil Promo via WhatsApp
+               href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20info%20promo%20utama%20dan%20pricelist.">
+              Ambil Promo
             </a>
           </div>
         </div>
@@ -236,7 +239,7 @@
         <div class="row g-4">
           <div class="col-md-6">
             <div class="card promo-mini h-100">
-              <img src="https://images.unsplash.com/photo-1484154218962-a197022b5858?auto=format&fit=crop&w=1200&q=80" alt="Bonus" loading="lazy">
+              <img src="assets/img/promo2.jfif" alt="Bonus" loading="lazy">
               <div class="p-3">
                 <div class="promo-tag">BONUS</div>
                 <div class="fw-semibold">Bonus Terbatas</div>
@@ -247,7 +250,7 @@
 
           <div class="col-md-6">
             <div class="card promo-mini h-100">
-              <img src="https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?auto=format&fit=crop&w=1200&q=80" alt="KPR" loading="lazy">
+              <img src="assets/img/promo3.jfif" alt="KPR" loading="lazy">
               <div class="p-3">
                 <div class="promo-tag">KPR</div>
                 <div class="fw-semibold">Bantu Proses KPR</div>
@@ -258,7 +261,7 @@
 
           <div class="col-12">
             <div class="card promo-mini promo-mini-wide">
-              <img src="https://images.unsplash.com/photo-1450101215322-bf5cd27642fc?auto=format&fit=crop&w=1600&q=80" alt="Legalitas" loading="lazy">
+              <img src="assets/img/promo4.jfif" alt="Legalitas" loading="lazy">
               <div class="p-3">
                 <div class="promo-tag">LEGAL</div>
                 <div class="fw-semibold">Legalitas Jelas</div>
@@ -624,11 +627,6 @@
 
     <div class="jm-footerBottom">
       <div>© <span id="jmYear"></span> Bernadyland. All rights reserved.</div>
-      <div class="jm-footerMiniLinks">
-        <a href="about.html">Tentang</a><span>•</span>
-        <a href="blog.html">Blog</a><span>•</span>
-        <a href="cariperumahan.html">Cari Perumahan</a>
-      </div>
     </div>
   </div>
 </footer>
@@ -641,5 +639,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
 
+</html>
