--- a/detail-tipea.html
+++ b/detail-tipea.html
@@ -12,49 +12,59 @@
 
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="assets/css/main.css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&family=Noto+Serif:wght@600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
-  <!-- FLOATING NAVBAR -->
-  <div class="jm-floatNav-wrap">
-    <nav class="navbar navbar-expand-lg jm-floatNav">
-      <div class="container-fluid px-3 px-lg-4">
+<!-- FLOATING NAVBAR -->
+<div class="jm-floatNav-wrap">
+  <nav class="navbar navbar-expand-lg jm-floatNav">
+    <div class="container-fluid px-3 px-lg-4">
 
-        <!-- Brand -->
-        <a class="navbar-brand jm-brand" href="/">
-          <span class="jm-logoWrap">
-            <img src="assets/img/logo-bernadyland.svg" alt="Bernadyland" class="jm-logo"
-                 onerror="this.style.display='none'">
-            <span class="jm-logoFallback">B</span>
-          </span>
-          <span class="jm-brandText d-none d-sm-inline">Bernadyland</span>
-        </a>
+      <!-- Brand -->
+      <a class="navbar-brand jm-brand" href="/">
+        <span class="jm-logoWrap">
+          <img src="assets/img/logo-bernadyland.svg" alt="Bernadyland" class="jm-logo"
+               onerror="this.style.display='none'">
+          <!-- fallback kalau logo belum ada -->
+          <span class="jm-logoFallback">B</span>
+        </span>
+        <span class="jm-brandText d-none d-sm-inline">Bernadyland</span>
+      </a>
 
-        <!-- Toggler -->
-        <button class="navbar-toggler jm-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#jmFloatNav" aria-controls="jmFloatNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <!-- Toggler (mobile) -->
+      <button class="navbar-toggler jm-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#jmFloatNav" aria-controls="jmFloatNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <!-- Menu -->
-        <div class="collapse navbar-collapse" id="jmFloatNav">
-          <ul class="navbar-nav jm-navCenter mx-lg-auto gap-lg-1">
-            <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
-            <li class="nav-item"><a class="nav-link" href="cariperumahan.html">Cari Perumahan</a></li>
-            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-          </ul>
+      <!-- Menu -->
+      <div class="collapse navbar-collapse" id="jmFloatNav">
+        <ul class="navbar-nav jm-navCenter mx-lg-auto gap-lg-1">
+          <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
+          <li class="nav-item"><a class="nav-link" href="cariperumahan.html">Cari Perumahan</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+        </ul>
 
-          <div class="jm-navRight ms-lg-3">
-            <a class="btn jm-waBtn" href="cariperumahan.html">Cari</a>
-          </div>
+        <!-- CTA -->
+        <div class="jm-navRight ms-lg-3">
+          <a class="btn jm-waBtn" target="_blank" rel="noopener"
+             href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20Saya%20ingin%20%20bertanya.">
+            Pusat Bantuan
+          </a>
         </div>
-
       </div>
-    </nav>
-  </div>
+
+    </div>
+  </nav>
+</div>
 
   <!-- PAGE -->
   <main class="du-page" id="top">
@@ -477,12 +487,6 @@
 
     <div class="jm-footerBottom">
       <div>© <span id="jmYear"></span> Bernadyland. All rights reserved.</div>
-      <div class="jm-footerMiniLinks">
-        <a href="about.html">Tentang</a><span>•</span>
-        <a href="blog.html">Blog</a><span>•</span>
-        <a href="cariperumahan.html">Cari Perumahan</a>
-      </div>
-    </div>
   </div>
 </footer>
 
