--- a/about.html
+++ b/about.html
@@ -12,6 +12,10 @@
 
   <!-- CSS halaman ini -->
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&family=Noto+Serif:wght@600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -51,8 +55,8 @@
         <!-- CTA -->
         <div class="jm-navRight ms-lg-3">
           <a class="btn jm-waBtn" target="_blank" rel="noopener"
-             href="cariperumahan.html">
-            Cari
+             href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20Saya%20ingin%20%20bertanya.">
+            Pusat Bantuan
           </a>
         </div>
       </div>
@@ -302,12 +306,6 @@
 
     <div class="jm-footerBottom">
       <div>© <span id="jmYear"></span> Bernadyland. All rights reserved.</div>
-      <div class="jm-footerMiniLinks">
-        <a href="about.html">Tentang</a><span>•</span>
-        <a href="blog.html">Blog</a><span>•</span>
-        <a href="cariperumahan.html">Cari Perumahan</a>
-      </div>
-    </div>
   </div>
 </footer>
 
