--- a/cariperumahan.html
+++ b/cariperumahan.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html> 
 <html lang="id">
 <head>
   <meta charset="utf-8" />
@@ -12,6 +12,10 @@
 
   <!-- CSS halaman ini -->
   <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&family=Noto+Serif:wght@600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -51,8 +55,8 @@
         <!-- CTA -->
         <div class="jm-navRight ms-lg-3">
           <a class="btn jm-waBtn" target="_blank" rel="noopener"
-             href="cariperumahan.html">
-            Cari
+             href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20Saya%20ingin%20%20bertanya.">
+            Pusat Bantuan
           </a>
         </div>
       </div>
@@ -90,15 +94,15 @@
             </div>
 
             <form class="filter-form" action="#" method="get">
-              <!-- lokasi -->
+              <!-- KOTA (pengganti lokasi) -->
               <div class="mb-3">
-                <label class="form-label fw-semibold">Lokasi</label>
-                <select class="form-select">
-                  <option selected>Semua Lokasi</option>
-                  <option>Dekat Tol / Akses Utama</option>
-                  <option>Dekat Sekolah</option>
-                  <option>Dekat RS / Klinik</option>
-                  <option>Dekat Pusat Belanja</option>
+                <label class="form-label fw-semibold">Kota</label>
+                <select class="form-select" aria-label="Pilih Kota">
+                  <option selected>Semua Kota</option>
+                  <option>Surabaya</option>
+                  <option>Sidoarjo</option>
+                  <option>Malang</option>
+                  <option>Gresik</option>
                 </select>
               </div>
 
@@ -138,7 +142,7 @@
               <!-- kamar -->
               <div class="mb-3">
                 <label class="form-label fw-semibold">Kamar Tidur</label>
-                <select class="form-select">
+                <select class="form-select" aria-label="Pilih Kamar Tidur">
                   <option selected>Semua</option>
                   <option>2 KT</option>
                   <option>3 KT</option>
@@ -226,7 +230,7 @@
             <div class="col-md-6 col-xl-4">
               <a class="prop-card" href="detail-tipea.html?unit=tipe-a">
                 <div class="prop-media">
-                  <img src="https://images.unsplash.com/photo-1572120360610-d971b9d7767c?auto=format&fit=crop&w=1600&q=80" alt="Tipe A Bernadyland" loading="lazy">
+                  <img src="assets/img/typea.webp" alt="Tipe A Bernadyland" loading="lazy">
                   <span class="ribbon">HOT</span>
                   <button class="save-btn" type="button" aria-label="Simpan">
                     <i class="bi bi-heart"></i>
@@ -260,7 +264,7 @@
             <div class="col-md-6 col-xl-4">
               <a class="prop-card" href="detail-tipea.html?unit=tipe-b">
                 <div class="prop-media">
-                  <img src="https://images.unsplash.com/photo-1502005229762-cf1b2da7c5d6?auto=format&fit=crop&w=1600&q=80" alt="Tipe B Bernadyland" loading="lazy">
+                  <img src="assets/img/typeb.webp" alt="Tipe B Bernadyland" loading="lazy">
                   <button class="save-btn" type="button" aria-label="Simpan">
                     <i class="bi bi-heart"></i>
                   </button>
@@ -293,7 +297,7 @@
             <div class="col-md-6 col-xl-4">
               <a class="prop-card" href="detail-tipea.html?unit=tipe-c">
                 <div class="prop-media">
-                  <img src="https://images.unsplash.com/photo-1564013799919-ab600027ffc6?auto=format&fit=crop&w=1600&q=80" alt="Tipe C Bernadyland" loading="lazy">
+                  <img src="assets/img/typec.webp" alt="Tipe C Bernadyland" loading="lazy">
                   <span class="pill">Bisa KPR</span>
                   <button class="save-btn" type="button" aria-label="Simpan">
                     <i class="bi bi-heart"></i>
@@ -327,7 +331,7 @@
             <div class="col-md-6 col-xl-4">
               <a class="prop-card" href="detail-tipea.html?unit=tipe-d">
                 <div class="prop-media">
-                  <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?auto=format&fit=crop&w=1600&q=80" alt="Tipe D Bernadyland" loading="lazy">
+                  <img src="assets/img/about.webp" alt="Tipe D Bernadyland" loading="lazy">
                   <span class="pill">Bonus Carport</span>
                   <button class="save-btn" type="button" aria-label="Simpan">
                     <i class="bi bi-heart"></i>
@@ -361,7 +365,7 @@
             <div class="col-md-6 col-xl-4">
               <a class="prop-card" href="detail-tipea.html?unit=tipe-a-plus">
                 <div class="prop-media">
-                  <img src="https://images.unsplash.com/photo-1512918728675-ed5a9ecdebfd?auto=format&fit=crop&w=1600&q=80" alt="Tipe A Plus" loading="lazy">
+                  <img src="assets/img/typea+.webp" alt="Tipe A Plus" loading="lazy">
                   <button class="save-btn" type="button" aria-label="Simpan">
                     <i class="bi bi-heart"></i>
                   </button>
@@ -394,7 +398,7 @@
             <div class="col-md-6 col-xl-4">
               <a class="prop-card" href="detail-tipea.html?unit=tipe-b-plus">
                 <div class="prop-media">
-                  <img src="https://images.unsplash.com/photo-1494526585095-c41746248156?auto=format&fit=crop&w=1600&q=80" alt="Tipe B Plus" loading="lazy">
+                  <img src="assets/img/typeb+.webp" alt="Tipe B Plus" loading="lazy">
                   <span class="pill">Legal Jelas</span>
                   <button class="save-btn" type="button" aria-label="Simpan">
                     <i class="bi bi-heart"></i>
@@ -503,11 +507,6 @@
 
     <div class="jm-footerBottom">
       <div>© <span id="jmYear"></span> Bernadyland. All rights reserved.</div>
-      <div class="jm-footerMiniLinks">
-        <a href="about.html">Tentang</a><span>•</span>
-        <a href="blog.html">Blog</a><span>•</span>
-        <a href="cariperumahan.html">Cari Perumahan</a>
-      </div>
     </div>
   </div>
 </footer>
@@ -521,17 +520,22 @@
     (() => {
       "use strict";
 
+      // Tahun otomatis (tetap)
+      const jmYear = document.getElementById("jmYear");
+      if (jmYear) jmYear.textContent = new Date().getFullYear();
+
       // =========================================================
-      // DATA INTERNAL (Harga dalam JUTA, lokasi, fasilitas, dll)
+      // DATA INTERNAL (Harga dalam JUTA, KOTA, fasilitas, dll)
       // Key harus sama dengan query `?unit=...`
       // =========================================================
       const PROPERTY_DB = {
-        "tipe-a":      { price: 360, type: "A", beds: 2, baths: 1, location: "Dekat Tol / Akses Utama", facilities: ["One Gate", "Security 24 Jam", "Internet Ready"], popularity: 95, date: "2026-01-03" },
-        "tipe-b":      { price: 460, type: "B", beds: 3, baths: 2, location: "Dekat Sekolah",           facilities: ["One Gate", "Security 24 Jam", "Taman"],          popularity: 88, date: "2026-01-02" },
-        "tipe-c":      { price: 590, type: "C", beds: 3, baths: 2, location: "Dekat RS / Klinik",       facilities: ["One Gate", "Security 24 Jam", "Clubhouse"],      popularity: 84, date: "2026-01-04" },
-        "tipe-d":      { price: 690, type: "D", beds: 3, baths: 2, location: "Dekat Pusat Belanja",     facilities: ["One Gate", "Security 24 Jam", "Jogging Track"],  popularity: 80, date: "2026-01-01" },
-        "tipe-a-plus": { price: 395, type: "A", beds: 2, baths: 1, location: "Dekat Sekolah",           facilities: ["One Gate", "Security 24 Jam", "Taman"],          popularity: 78, date: "2025-12-29" },
-        "tipe-b-plus": { price: 545, type: "B", beds: 3, baths: 2, location: "Dekat Tol / Akses Utama", facilities: ["One Gate", "Security 24 Jam", "Internet Ready"],  popularity: 82, date: "2025-12-30" },
+        // city: "Surabaya|Sidoarjo|Malang|Gresik"
+        "tipe-a":      { price: 360, type: "A", beds: 2, baths: 1, city: "Surabaya", facilities: ["One Gate", "Security 24 Jam", "Internet Ready"], popularity: 95, date: "2026-01-03" },
+        "tipe-b":      { price: 460, type: "B", beds: 3, baths: 2, city: "Sidoarjo", facilities: ["One Gate", "Security 24 Jam", "Taman"],          popularity: 88, date: "2026-01-02" },
+        "tipe-c":      { price: 590, type: "C", beds: 3, baths: 2, city: "Malang",   facilities: ["One Gate", "Security 24 Jam", "Clubhouse"],      popularity: 84, date: "2026-01-04" },
+        "tipe-d":      { price: 690, type: "D", beds: 3, baths: 2, city: "Gresik",   facilities: ["One Gate", "Security 24 Jam", "Jogging Track"],  popularity: 80, date: "2026-01-01" },
+        "tipe-a-plus": { price: 395, type: "A", beds: 2, baths: 1, city: "Sidoarjo", facilities: ["One Gate", "Security 24 Jam", "Taman"],          popularity: 78, date: "2025-12-29" },
+        "tipe-b-plus": { price: 545, type: "B", beds: 3, baths: 2, city: "Surabaya", facilities: ["One Gate", "Security 24 Jam", "Internet Ready"],  popularity: 82, date: "2025-12-30" },
       };
 
       // ===== Helpers =====
@@ -555,8 +559,11 @@
       const filterForm = $(".filter-form");
       const resetBtn = $(".filter-reset");
       const allSelects = $$(".filter-form select.form-select");
-      const locationSelect = allSelects[0] || null;       // Lokasi
-      const bedroomSelect = allSelects[1] || null;        // Kamar tidur
+
+      // urutan select di HTML: (0) Kota, (1) Kamar tidur
+      const citySelect = allSelects[0] || null;
+      const bedroomSelect = allSelects[1] || null;
+
       const budgetRange = $('.filter-form input[type="range"].form-range');
       const typeChecks = ["tA", "tB", "tC", "tD"].map((id) => $("#" + id)).filter(Boolean);
       const sortSelect = $(".sort-select");
@@ -585,7 +592,10 @@
           price: db?.price ?? null,   // juta
           beds: db?.beds ?? null,
           baths: db?.baths ?? null,
-          location: db?.location || ($(".prop-loc", a)?.textContent || ""),
+
+          // ====== NEW: KOTA ======
+          city: db?.city || "",
+
           facilities: db?.facilities || [],
           popularity: db?.popularity ?? 0,
           date: db?.date ? new Date(db.date).getTime() : 0,
@@ -597,12 +607,12 @@
           if (priceEl) priceEl.textContent = rupiah(meta.price);
         }
 
-        // Attach dataset for quick sort/filter
+        // dataset
         a.dataset.unit = meta.unitKey;
         a.dataset.type = meta.type;
         if (meta.price != null) a.dataset.price = String(meta.price);
         if (meta.beds != null) a.dataset.beds = String(meta.beds);
-        a.dataset.location = meta.location;
+        a.dataset.city = meta.city;
         a.dataset.popularity = String(meta.popularity);
         a.dataset.date = String(meta.date);
 
@@ -623,7 +633,7 @@
         });
       });
 
-      // ===== Budget label update (uses existing small text) =====
+      // ===== Budget label update =====
       const updateBudgetLabel = () => {
         if (!budgetRange) return;
         const label = budgetRange.closest(".mb-3")?.querySelector(".form-label .small.text-muted");
@@ -632,7 +642,7 @@
 
       // ===== Read filters =====
       const getFilters = () => {
-        const loc = locationSelect ? locationSelect.value : "Semua Lokasi";
+        const city = citySelect ? citySelect.value : "Semua Kota";
         const maxBudget = budgetRange ? Number(budgetRange.value) : null;
 
         const types = typeChecks
@@ -653,14 +663,14 @@
 
         const sort = sortSelect ? sortSelect.value : "Rekomendasi";
 
-        return { loc, maxBudget, types, beds, facs, sort };
+        return { city, maxBudget, types, beds, facs, sort };
       };
 
       // ===== Match logic =====
       const matchCard = (meta, f) => {
-        // lokasi
-        if (f.loc && norm(f.loc) !== "semua lokasi") {
-          if (!norm(meta.location).includes(norm(f.loc))) return false;
+        // KOTA
+        if (f.city && norm(f.city) !== "semua kota") {
+          if (norm(meta.city) !== norm(f.city)) return false;
         }
 
         // budget = maksimum harga (juta)
@@ -749,7 +759,7 @@
       // ===== Reset =====
       const resetFilters = () => {
         // selects
-        if (locationSelect) locationSelect.selectedIndex = 0;
+        if (citySelect) citySelect.selectedIndex = 0;
         if (bedroomSelect) bedroomSelect.selectedIndex = 0;
 
         // range
