--- a/index.html
+++ b/index.html
@@ -3,8 +3,53 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>Bernadyland — Perumahan Modern</title>
   <meta name="description" content="Bernadyland: perumahan modern, lokasi strategis, promo terbatas. Minta pricelist & booking survey sekarang." />
+
+  <!-- SEO essentials -->
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="googlebot" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="theme-color" content="#1f4fff" />
+  <meta name="color-scheme" content="light" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="format-detection" content="telephone=no" />
+
+  <!-- Canonical (ganti domain sesuai domain kamu) -->
+  <link rel="canonical" href="https://bernadyland.vercel.app/" />
+
+  <!-- Preconnect / DNS Prefetch (Pagespeed) -->
+  <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+  <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Preload LCP image (hero) -->
+  <link rel="preload" as="image" href="assets/img/heroland.webp" type="image/webp" fetchpriority="high">
+
+  <!-- FAVICON (maksimal) — pastikan file-nya ada -->
+  <link rel="icon" href="https://bernadyland.vercel.app/favicon.ico" sizes="any">
+  <link rel="icon" type="image/svg+xml" href="https://bernadyland.vercel.app/favicon.svg">
+  <link rel="apple-touch-icon" href="https://bernadyland.vercel.app/apple-touch-icon.png">
+  <link rel="manifest" href="https://bernadyland.vercel.app/site.webmanifest">
+  <link rel="mask-icon" href="https://bernadyland.vercel.app/safari-pinned-tab.svg" color="#1f4fff">
+  <meta name="msapplication-TileColor" content="#1f4fff">
+
+  <!-- Open Graph (Social / AI summary friendliness) -->
+  <meta property="og:locale" content="id_ID" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Bernadyland" />
+  <meta property="og:title" content="Bernadyland — Perumahan Modern" />
+  <meta property="og:description" content="Perumahan modern, lokasi strategis, promo terbatas. Minta pricelist & booking survey sekarang." />
+  <meta property="og:url" content="https://bernadyland.vercel.app/" />
+  <meta property="og:image" content="https://bernadyland.vercel.app/assets/img/heroland.webp" />
+  <meta property="og:image:alt" content="Bernadyland — Perumahan Modern" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Bernadyland — Perumahan Modern" />
+  <meta name="twitter:description" content="Perumahan modern, lokasi strategis, promo terbatas. Minta pricelist & booking survey sekarang." />
+  <meta name="twitter:image" content="https://bernadyland.vercel.app/assets/img/heroland.webp" />
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -13,10 +58,45 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/main.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&family=Noto+Serif:wght@600;700;800;900&display=swap" rel="stylesheet">
 
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&family=Noto+Serif:wght@600;700;800;900&display=swap" rel="stylesheet">
+
+  <!-- Structured Data (AI Overview / SEO) -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@graph":[
+      {
+        "@type":"Organization",
+        "@id":"https://bernadyland.vercel.app/#org",
+        "name":"Bernadyland",
+        "url":"https://bernadyland.vercel.app/",
+        "logo":"https://bernadyland.vercel.app/assets/img/logo-bernadyland.svg"
+      },
+      {
+        "@type":"WebSite",
+        "@id":"https://bernadyland.vercel.app/#website",
+        "url":"https://bernadyland.vercel.app/",
+        "name":"Bernadyland",
+        "publisher":{"@id":"https://bernadyland.vercel.app/#org"}
+      },
+      {
+        "@type":"WebPage",
+        "@id":"https://bernadyland.vercel.app/#webpage",
+        "url":"https://bernadyland.vercel.app/",
+        "name":"Bernadyland — Perumahan Modern",
+        "description":"Bernadyland: perumahan modern, lokasi strategis, promo terbatas. Minta pricelist & booking survey sekarang.",
+        "isPartOf":{"@id":"https://bernadyland.vercel.app/#website"},
+        "about":{"@id":"https://bernadyland.vercel.app/#org"},
+        "primaryImageOfPage":{
+          "@type":"ImageObject",
+          "url":"https://bernadyland.vercel.app/assets/img/heroland.webp"
+        }
+      }
+    ]
+  }
+  </script>
 </head>
 
 <body>
@@ -48,8 +128,8 @@
       <div class="collapse navbar-collapse" id="jmFloatNav">
         <ul class="navbar-nav jm-navCenter mx-lg-auto gap-lg-1">
           <li class="nav-item"><a class="nav-link" href="index.html">Beranda</a></li>
-          <li class="nav-item"><a class="nav-link" href="cariperumahan.html">Cari Perumahan</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="cariperumahan.html">Cari Perumahan</a></li>
           <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
         </ul>
 
@@ -217,65 +297,70 @@
     <div class="row g-4 mt-2">
       <!-- Featured promo (lebih besar) -->
       <div class="col-lg-6">
-        <div class="card promo-feature h-100">
+        <a class="card promo-feature h-100 text-decoration-none"
+           target="_blank" rel="noopener"
+           href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20info%20promo%20utama%20dan%20pricelist."
+           aria-label="Klik untuk chat WhatsApp promo utama">
           <div class="promo-feature-img">
             <img src="assets/img/promo.jfif" alt="Promo utama" loading="lazy">
           </div>
           <div class="promo-feature-body">
             <div class="promo-tag">PROMO UTAMA</div>
             <h3 class="h4 fw-bold mb-2">DP Ringan + Bonus Terbatas</h3>
-            <p class="text-muted mb-3">Cocok untuk yang ingin cepat booking. Dapatkan detail paket & simulasi.</p>
+            <p class="text-muted mb-3">Cocok untuk yang ingin cepat booking. Dapatkan detail paket & simulasi. Cocok untuk yang ingin cepat booking. Dapatkan detail paket & simulasi. Cocok untuk yang ingin cepat booking. Dapatkan detail paket & simulasi. Cocok untuk yang ingin cepat booking. Dapatkan detail paket & simulasi.</p>
 
-            <a class="btn btn-accent btn-lg" target="_blank" rel="noopener"
-               href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20info%20promo%20utama%20dan%20pricelist.">
+            <span class="btn btn-accent btn-lg">
               Ambil Promo
-            </a>
+            </span>
           </div>
-        </div>
+        </a>
       </div>
 
       <!-- 3 promo kecil (rapi) -->
       <div class="col-lg-6">
         <div class="row g-4">
           <div class="col-md-6">
-            <div class="card promo-mini h-100">
+            <a class="card promo-mini h-100 text-decoration-none"
+               target="_blank" rel="noopener"
+               href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20info%20bonus%20promo%20(kanopi%20/%20kitchen%20set)."
+               aria-label="Klik untuk chat WhatsApp promo bonus terbatas">
               <img src="assets/img/promo2.jfif" alt="Bonus" loading="lazy">
               <div class="p-3">
                 <div class="promo-tag">BONUS</div>
                 <div class="fw-semibold">Bonus Terbatas</div>
                 <div class="text-muted small">Kanopi / kitchen set</div>
               </div>
-            </div>
+            </a>
           </div>
 
           <div class="col-md-6">
-            <div class="card promo-mini h-100">
+            <a class="card promo-mini h-100 text-decoration-none"
+               target="_blank" rel="noopener"
+               href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20dibantu%20proses%20KPR%20(simulasi%20dan%20pengajuan)."
+               aria-label="Klik untuk chat WhatsApp bantuan proses KPR">
               <img src="assets/img/promo3.jfif" alt="KPR" loading="lazy">
               <div class="p-3">
                 <div class="promo-tag">KPR</div>
                 <div class="fw-semibold">Bantu Proses KPR</div>
                 <div class="text-muted small">Simulasi & pengajuan</div>
               </div>
-            </div>
+            </a>
           </div>
 
           <div class="col-12">
-            <div class="card promo-mini promo-mini-wide">
+            <a class="card promo-mini promo-mini-wide text-decoration-none"
+               target="_blank" rel="noopener"
+               href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20info%20legalitas%20(SHM/HGB%20+%20PBG)%20dan%20pricelist."
+               aria-label="Klik untuk chat WhatsApp info legalitas">
               <img src="assets/img/promo4.jfif" alt="Legalitas" loading="lazy">
               <div class="p-3">
                 <div class="promo-tag">LEGAL</div>
                 <div class="fw-semibold">Legalitas Jelas</div>
                 <div class="text-muted small">SHM/HGB + PBG (sesuaikan)</div>
               </div>
-            </div>
-          </div>
-
-          <div class="col-12">
-            <a class="btn btn-outline-primary w-100 btn-lg" target="_blank" rel="noopener"
-               href="https://wa.me/628XXXXXXXXXX?text=Halo%20Bernadyland,%20saya%20mau%20minta%20detail%20promo%20dan%20simulasi.">
-              Promo
             </a>
           </div>
+
         </div>
       </div>
     </div>
@@ -564,6 +649,61 @@
     <span class="d-none d-md-inline">Chat WhatsApp</span>
   </a>
 
+  <!-- FLOATING UP (Scroll to Top) -->
+  <button class="jm-up" id="jmUp" type="button" aria-label="Kembali ke atas">
+    <i class="bi bi-arrow-up"></i>
+  </button>
+
+  <style>
+    /* =========================
+   FLOATING UP (Scroll to top)
+   ========================= */
+.jm-up{
+  position: fixed;
+  right: 18px;
+  bottom: 82px; /* sengaja di atas tombol WA */
+  z-index: 998;
+
+  width: 46px;
+  height: 46px;
+  border-radius: 999px;
+
+  border: 1px solid rgba(15,23,42,.12);
+  background: rgba(255,255,255,.92);
+  box-shadow: 0 14px 30px rgba(2,6,23,.14);
+
+  display: grid;
+  place-items: center;
+
+  color: rgba(11,18,32,.78);
+  opacity: 0;
+  transform: translateY(10px);
+  pointer-events: none;
+  transition: opacity .18s ease, transform .18s ease, filter .18s ease;
+}
+.jm-up:hover{
+  filter: brightness(.98);
+  color: var(--accent2);
+}
+
+.jm-up.is-show{
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: auto;
+}
+
+/* mobile: biar tidak numpuk + lebih kecil */
+@media (max-width: 576px){
+  .jm-up{
+    right: 14px;
+    bottom: 76px;
+    width: 44px;
+    height: 44px;
+  }
+}
+
+  </style>
+
 <!-- FOOTER (simple / normal) -->
 <footer class="jm-footerSimple">
   <div class="container">
@@ -585,12 +725,6 @@
           Temukan unit yang cocok lalu hubungi kami untuk pricelist terbaru.
         </p>
 
-        <div class="jm-footerBtns">
-          <a class="btn jm-footerGhost" target="_blank" rel="noopener"
-             href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20minta%20pricelist%20dan%20jadwal%20survey.">
-            <i class="bi bi-whatsapp me-2"></i> Hubungi Kami
-          </a>
-        </div>
       </div>
 
       <!-- Links -->
@@ -609,7 +743,7 @@
         <div class="jm-footerTitle">Kontak</div>
 
         <ul class="jm-footerInfo">
-          <li><i class="bi bi-geo-alt"></i><span>Lokasi proyek (sesuaikan)</span></li>
+          <li><i class="bi bi-geo-alt"></i><span>Bernadyland Slawu</span></li>
           <li><i class="bi bi-envelope"></i><span>hello@bernadyland.com</span></li>
         </ul>
 
@@ -618,7 +752,7 @@
           <a class="jm-soc" href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
           <a class="jm-soc" href="#" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
           <a class="jm-soc" target="_blank" rel="noopener"
-             href="https://wa.me/628XXXXXXXXXX?text=Halo%20Bernadyland,%20saya%20mau%20minta%20pricelist."
+             href="https://wa.me/62895369969300?text=Halo%20Bernadyland,%20saya%20mau%20minta%20pricelist."
              aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
         </div>
       </div>
@@ -636,8 +770,38 @@
   document.getElementById("jmYear").textContent = new Date().getFullYear();
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Floating Up script -->
+<script>
+  (function(){
+    const btn = document.getElementById('jmUp');
+    if(!btn) return;
+
+    const toggle = () => {
+      const y = window.scrollY || document.documentElement.scrollTop;
+      btn.classList.toggle('is-show', y > 600);
+    };
+
+    window.addEventListener('scroll', toggle, { passive: true });
+    toggle();
+
+    btn.addEventListener('click', () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+  })();
+</script>
+
+<!-- SEO/AI Overview add-ons (tanpa mengubah struktur) -->
+<script>
+  (function(){
+    // Pastikan link og:url & canonical konsisten (sudah diset statis), hanya safety:
+    // (Tidak mengubah DOM bila tidak perlu)
+    try{
+      // noop
+    } catch(e){}
+  })();
+</script>
+
 </body>
-
 </html>
