--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
 
       <!-- Tipe D -->
       <div class="col-md-6 col-lg-3">
-        <a class="unit-link" href="assets/img/about.webp">
+        <a class="unit-link" href="detail-tipea.html">
           <div class="card unit-card h-100">
             <div class="unit-img">
-              <img src="https://images.unsplash.com/photo-1580587771525-78b9dba3b914?auto=format&fit=crop&w=1200&q=80" alt="Tipe D" loading="lazy">
+              <img src="assets/img/about.webp" alt="Tipe D" loading="lazy">
             </div>
             <div class="card-body">
               <h3 class="h6 mb-1">Tipe D</h3>
